src/apyc-parser.output
Terminals unused in grammar

   INT
   "@assign"
   "@attributeref"
   "@binop"
   "@block"
   "@call"
   "@@block"
   "@class"
   "@compare"
   "@left_compare"
   "@dict_display"
   EMPTY
   "@expr_list"
   "@formals_list"
   "@function_type"
   "@if_expr"
   "@list_display"
   "@def"
   "@module"
   "@pair"
   "@print"
   "@println"
   "@slicing"
   "@@slicing"
   "@stmt_list"
   STRING_LITERAL
   "@subscription"
   "@@subscription"
   "@target_list"
   "@type_formals_list"
   "@tuple"
   "@type"
   "@type_list"
   "@typed_id"


State 14 conflicts: 1 reduce/reduce
State 17 conflicts: 1 reduce/reduce
State 25 conflicts: 4 reduce/reduce
State 35 conflicts: 4 reduce/reduce
State 36 conflicts: 4 reduce/reduce
State 37 conflicts: 4 reduce/reduce
State 219 conflicts: 1 shift/reduce
State 282 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: __14

    2 identifier: ID

    3 atom: identifier
    4     | literal
    5     | enclosure

    6 enclosure: parenth_form
    7          | list_display
    8          | dict_display

    9 literal: stringliteral
   10        | "@int_literal"

   11 string_piece: STRING
   12             | RAWSTRING

   13 stringliteral: string_piece
   14              | stringliteral string_piece

   15 parenth_form: "(" expression ")"
   16             | "(" __19 ")"

   17 list_display: "[" __20 "]"

   18 dict_display: "{" __21 "}"

   19 key_datum_list: key_datum __23 __9

   20 key_datum: expression ":" expression

   21 primary: atom
   22        | attributeref
   23        | subscription
   24        | slicing
   25        | call

   26 attributeref: primary "." identifier

   27 subscription: primary "[" expression_or_list "]"

   28 slicing: primary "[" bound ":" bound "]"

   29 bound: expression
   30      | empty

   31 call: primary "(" argument_list ")"
   32     | parameterized_type "(" argument_list ")"

   33 argument_list: __15

   34 expression: conditional_expression

   35 conditional_expression: expr1 "if" expr1 "else" expression
   36                       | expr1

   37 expr1: expr2
   38      | expr1 "or" expr1
   39      | expr1 "and" expr1
   40      | "not" expr1

   41 expression_list_no_comma: expression __22

   42 expression_list0_no_comma: __16

   43 expression_or_list: expression
   44                   | __1 __8

   45 expression_or_list0: expression_or_list
   46                    | empty

   47 comp_operator: __0
   48              | "is" "not"
   49              | "not" "in"

   50 expr2: left_compare comp_operator expr3
   51      | expr3 comp_operator expr3
   52      | expr3

   53 left_compare: expr3 comp_operator expr3
   54             | left_compare comp_operator expr3

   55 expr3: primary
   56      | "-" expr3
   57      | "+" expr3
   58      | expr3 "+" expr3
   59      | expr3 "-" expr3
   60      | expr3 "*" expr3
   61      | expr3 "/" expr3
   62      | expr3 "//" expr3
   63      | expr3 "%" expr3
   64      | expr3 "**" expr3

   65 simple_stmt: expression_stmt
   66            | assignment_stmt
   67            | pass_stmt
   68            | print_stmt
   69            | return_stmt
   70            | break_stmt
   71            | continue_stmt

   72 expression_stmt: expression_or_list

   73 assignment_stmt: target_list "=" expression_or_list
   74                | target_list "=" assignment_stmt

   75 target_list: target
   76            | "(" target ")"
   77            | target_list1
   78            | "(" target_list1 ")"
   79            | "[" target_list1 "]"
   80            | "[" target "]"

   81 target_list1: /* empty */
   82             | target __4 __9
   83             | target ","

   84 target: identifier
   85       | identifier type_annotation
   86       | attributeref
   87       | subscription
   88       | slicing

   89 pass_stmt: "pass"

   90 print_stmt: "print" empty expression_list0_no_comma
   91           | "print" ">>" expression
   92           | "print" ">>" expression "," expression_list_no_comma
   93           | "print" empty expression_list_no_comma ","
   94           | "print" ">>" expression "," expression_list_no_comma ","

   95 return_stmt: "return" expression_or_list0

   96 break_stmt: "break"

   97 continue_stmt: "continue"

   98 compound_stmt: if_stmt
   99              | while_stmt
  100              | for_stmt
  101              | funcdef
  102              | classdef

  103 stmts: stmt_list NEWLINE
  104      | NEWLINE INDENT __2 DEDENT
  105      | __error__ NEWLINE
  106      | NEWLINE INDENT __error__ DEDENT

  107 suite: stmts

  108 statement: stmt_list NEWLINE
  109          | compound_stmt

  110 stmt_list: simple_stmt __24 __10

  111 @1: /* empty */

  112 if_stmt: "if" expression ":" @1 suite elifs

  113 elifs: "elif" expression ":" suite elifs
  114      | else_clause

  115 else_clause: /* empty */
  116            | "else" ":" suite

  117 @2: /* empty */

  118 @3: /* empty */

  119 while_stmt: "while" expression ":" @2 suite @3 else_clause

  120 @4: /* empty */

  121 @5: /* empty */

  122 for_stmt: "for" target_list "in" expression_or_list ":" @4 suite @5 else_clause

  123 @6: /* empty */

  124 funcdef: "def" funcname "(" parameter_list ")" opt_type_annotation ":" @6 funcbody

  125 funcbody: stmts
  126         | native
  127         | NEWLINE INDENT native DEDENT

  128 native: "native" stringliteral NEWLINE

  129 parameter_list: /* empty */
  130               | __13 parameter __11

  131 parameter: identifier
  132          | identifier type_annotation

  133 funcname: identifier

  134 @7: /* empty */

  135 classdef: "class" identifier type_formals ":" @7 classbody

  136 type_formals: __18

  137 classbody: stmts

  138 type_annotation: "::" type

  139 opt_type_annotation: type_annotation
  140                    | empty

  141 type: parameterized_type
  142     | identifier
  143     | type_var
  144     | "(" type_list ")" "->" type

  145 type_var: "@type_var"

  146 parameterized_type: identifier type_params

  147 type_params: __6

  148 type_list: __17

  149 types: type
  150      | types "," type

  151 empty: /* empty */

  152 __0: "<"
  153    | ">"
  154    | "=="
  155    | "<="
  156    | ">="
  157    | "!="
  158    | "is"
  159    | "in"

  160 __1: expression ","
  161    | __1 expression ","

  162 __2: statement
  163    | __2 statement

  164 __3: "," expression
  165    | __3 "," expression

  166 __4: "," target
  167    | __4 "," target

  168 __5: ","
  169    | __3 __12

  170 __6: "of" "[" types "]"
  171    | "of" type

  172 __7: NEWLINE
  173    | statement

  174 __8: /* empty */
  175    | expression

  176 __9: /* empty */
  177    | ","

  178 __10: /* empty */
  179     | ";"

  180 __11: /* empty */
  181     | ","

  182 __12: /* empty */
  183     | ","

  184 __13: /* empty */
  185     | __13 parameter ","

  186 __14: /* empty */
  187     | __14 __7

  188 __15: /* empty */
  189     | expression __22 __9

  190 __16: /* empty */
  191     | expression __22

  192 __17: /* empty */
  193     | types

  194 __18: /* empty */
  195     | "of" "[" type_var __26 "]"

  196 __19: /* empty */
  197     | expression __5

  198 __20: /* empty */
  199     | expression __25 __12

  200 __21: /* empty */
  201     | key_datum_list

  202 __22: /* empty */
  203     | __22 "," expression

  204 __23: /* empty */
  205     | __23 "," key_datum

  206 __24: /* empty */
  207     | __24 ";" simple_stmt

  208 __25: /* empty */
  209     | __25 "," expression

  210 __26: /* empty */
  211     | __26 "," type_var

  212 __error__: error


Terminals, with rules where they appear

$end (0) 0
"%" (37) 63
"(" (40) 15 16 31 32 76 78 124 144
")" (41) 15 16 31 32 76 78 124 144
"*" (42) 60
"+" (43) 57 58
"," (44) 83 92 93 94 150 160 161 164 165 166 167 168 177 181 183 185
    203 205 209 211
"-" (45) 56 59
"." (46) 26
"/" (47) 61
":" (58) 20 28 112 113 116 119 122 124 135
";" (59) 179 207
"<" (60) 152
"=" (61) 73 74
">" (62) 153
"[" (91) 17 27 28 79 80 170 195
"]" (93) 17 27 28 79 80 170 195
"{" (123) 18
"}" (125) 18
error (256) 212
INT (258)
STRING (259) 11
ID (260) 2
"@unop" (261)
"//" (262) 62
"**" (263) 64
"and" (264) 39
"@assign" (265)
"@attributeref" (266)
"@binop" (267)
"@block" (268)
"break" (269) 96
"@call" (270)
"@@block" (271)
"@class" (272)
"@compare" (273)
"@left_compare" (274)
"continue" (275) 97
DEDENT (276) 104 106 127
"def" (277) 124
"@dict_display" (278)
EMPTY (279)
"@expr_list" (280)
"for" (281) 122
"@formals_list" (282)
"@function_type" (283)
"if" (284) 35 112
"@if_expr" (285)
INDENT (286) 104 106 127
"@int_literal" (287) 10
"@list_display" (288)
"@def" (289)
"@module" (290)
"native" (291) 128
"not" (292) 40 48 49
"or" (293) 38
"@pair" (294)
"@print" (295)
"@println" (296)
"@slicing" (297)
"@@slicing" (298)
"@stmt_list" (299)
STRING_LITERAL (300)
"@subscription" (301)
"@@subscription" (302)
"@target_list" (303)
"@type_formals_list" (304)
"@tuple" (305)
"@type" (306)
"@type_list" (307)
"@type_var" (308) 145
"@typed_id" (309)
"while" (310) 119
"!=" (311) 157
"->" (312) 144
"::" (313) 138
"<=" (314) 155
"==" (315) 154
">=" (316) 156
">>" (317) 91 92 94
"class" (318) 135
"elif" (319) 113
"else" (320) 35 116
"in" (321) 49 122 159
"is" (322) 48 158
"of" (323) 170 171 195
"pass" (324) 89
"print" (325) 90 91 92 93 94
"return" (326) 95
NEWLINE (327) 103 104 105 106 108 127 128 172
RAWSTRING (328) 12


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
program (93)
    on left: 1, on right: 0
identifier (94)
    on left: 2, on right: 3 26 84 85 131 132 133 135 142 146
atom (95)
    on left: 3 4 5, on right: 21
enclosure (96)
    on left: 6 7 8, on right: 5
literal (97)
    on left: 9 10, on right: 4
string_piece (98)
    on left: 11 12, on right: 13 14
stringliteral (99)
    on left: 13 14, on right: 9 14 128
parenth_form (100)
    on left: 15 16, on right: 6
list_display (101)
    on left: 17, on right: 7
dict_display (102)
    on left: 18, on right: 8
key_datum_list (103)
    on left: 19, on right: 201
key_datum (104)
    on left: 20, on right: 19 205
primary (105)
    on left: 21 22 23 24 25, on right: 26 27 28 31 55
attributeref (106)
    on left: 26, on right: 22 86
subscription (107)
    on left: 27, on right: 23 87
slicing (108)
    on left: 28, on right: 24 88
bound (109)
    on left: 29 30, on right: 28
call (110)
    on left: 31 32, on right: 25
argument_list (111)
    on left: 33, on right: 31 32
expression (112)
    on left: 34, on right: 15 20 29 35 41 43 91 92 94 112 113 119 160
    161 164 165 175 189 191 197 199 203 209
conditional_expression (113)
    on left: 35 36, on right: 34
expr1 (114)
    on left: 37 38 39 40, on right: 35 36 38 39 40
expression_list_no_comma (115)
    on left: 41, on right: 92 93 94
expression_list0_no_comma (116)
    on left: 42, on right: 90
expression_or_list (117)
    on left: 43 44, on right: 27 45 72 73 122
expression_or_list0 (118)
    on left: 45 46, on right: 95
comp_operator (119)
    on left: 47 48 49, on right: 50 51 53 54
expr2 (120)
    on left: 50 51 52, on right: 37
left_compare (121)
    on left: 53 54, on right: 50 54
expr3 (122)
    on left: 55 56 57 58 59 60 61 62 63 64, on right: 50 51 52 53 54
    56 57 58 59 60 61 62 63 64
simple_stmt (123)
    on left: 65 66 67 68 69 70 71, on right: 110 207
expression_stmt (124)
    on left: 72, on right: 65
assignment_stmt (125)
    on left: 73 74, on right: 66 74
target_list (126)
    on left: 75 76 77 78 79 80, on right: 73 74 122
target_list1 (127)
    on left: 81 82 83, on right: 77 78 79
target (128)
    on left: 84 85 86 87 88, on right: 75 76 80 82 83 166 167
pass_stmt (129)
    on left: 89, on right: 67
print_stmt (130)
    on left: 90 91 92 93 94, on right: 68
return_stmt (131)
    on left: 95, on right: 69
break_stmt (132)
    on left: 96, on right: 70
continue_stmt (133)
    on left: 97, on right: 71
compound_stmt (134)
    on left: 98 99 100 101 102, on right: 109
stmts (135)
    on left: 103 104 105 106, on right: 107 125 137
suite (136)
    on left: 107, on right: 112 113 116 119 122
statement (137)
    on left: 108 109, on right: 162 163 173
stmt_list (138)
    on left: 110, on right: 103 108
if_stmt (139)
    on left: 112, on right: 98
@1 (140)
    on left: 111, on right: 112
elifs (141)
    on left: 113 114, on right: 112 113
else_clause (142)
    on left: 115 116, on right: 114 119 122
while_stmt (143)
    on left: 119, on right: 99
@2 (144)
    on left: 117, on right: 119
@3 (145)
    on left: 118, on right: 119
for_stmt (146)
    on left: 122, on right: 100
@4 (147)
    on left: 120, on right: 122
@5 (148)
    on left: 121, on right: 122
funcdef (149)
    on left: 124, on right: 101
@6 (150)
    on left: 123, on right: 124
funcbody (151)
    on left: 125 126 127, on right: 124
native (152)
    on left: 128, on right: 126 127
parameter_list (153)
    on left: 129 130, on right: 124
parameter (154)
    on left: 131 132, on right: 130 185
funcname (155)
    on left: 133, on right: 124
classdef (156)
    on left: 135, on right: 102
@7 (157)
    on left: 134, on right: 135
type_formals (158)
    on left: 136, on right: 135
classbody (159)
    on left: 137, on right: 135
type_annotation (160)
    on left: 138, on right: 85 132 139
opt_type_annotation (161)
    on left: 139 140, on right: 124
type (162)
    on left: 141 142 143 144, on right: 138 144 149 150 171
type_var (163)
    on left: 145, on right: 143 195 211
parameterized_type (164)
    on left: 146, on right: 32 141
type_params (165)
    on left: 147, on right: 146
type_list (166)
    on left: 148, on right: 144
types (167)
    on left: 149 150, on right: 150 170 193
empty (168)
    on left: 151, on right: 30 46 90 93 140
__0 (169)
    on left: 152 153 154 155 156 157 158 159, on right: 47
__1 (170)
    on left: 160 161, on right: 44 161
__2 (171)
    on left: 162 163, on right: 104 163
__3 (172)
    on left: 164 165, on right: 165 169
__4 (173)
    on left: 166 167, on right: 82 167
__5 (174)
    on left: 168 169, on right: 197
__6 (175)
    on left: 170 171, on right: 147
__7 (176)
    on left: 172 173, on right: 187
__8 (177)
    on left: 174 175, on right: 44
__9 (178)
    on left: 176 177, on right: 19 82 189
__10 (179)
    on left: 178 179, on right: 110
__11 (180)
    on left: 180 181, on right: 130
__12 (181)
    on left: 182 183, on right: 169 199
__13 (182)
    on left: 184 185, on right: 130 185
__14 (183)
    on left: 186 187, on right: 1 187
__15 (184)
    on left: 188 189, on right: 33
__16 (185)
    on left: 190 191, on right: 42
__17 (186)
    on left: 192 193, on right: 148
__18 (187)
    on left: 194 195, on right: 136
__19 (188)
    on left: 196 197, on right: 16
__20 (189)
    on left: 198 199, on right: 17
__21 (190)
    on left: 200 201, on right: 18
__22 (191)
    on left: 202 203, on right: 41 189 191 203
__23 (192)
    on left: 204 205, on right: 19 205
__24 (193)
    on left: 206 207, on right: 110 207
__25 (194)
    on left: 208 209, on right: 199 209
__26 (195)
    on left: 210 211, on right: 195 211
__error__ (196)
    on left: 212, on right: 105 106


state 0

    0 $accept: . program $end

    $default  reduce using rule 186 (__14)

    program  go to state 1
    __14     go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: __14 .
  187 __14: __14 . __7

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "break"         shift, and go to state 6
    "continue"      shift, and go to state 7
    "def"           shift, and go to state 8
    "for"           shift, and go to state 9
    "if"            shift, and go to state 10
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "while"         shift, and go to state 13
    "("             shift, and go to state 14
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 17
    "class"         shift, and go to state 18
    "pass"          shift, and go to state 19
    "print"         shift, and go to state 20
    "return"        shift, and go to state 21
    "{"             shift, and go to state 22
    NEWLINE         shift, and go to state 23
    RAWSTRING       shift, and go to state 24

    "="       reduce using rule 81 (target_list1)
    $default  reduce using rule 1 (program)

    identifier              go to state 25
    atom                    go to state 26
    enclosure               go to state 27
    literal                 go to state 28
    string_piece            go to state 29
    stringliteral           go to state 30
    parenth_form            go to state 31
    list_display            go to state 32
    dict_display            go to state 33
    primary                 go to state 34
    attributeref            go to state 35
    subscription            go to state 36
    slicing                 go to state 37
    call                    go to state 38
    expression              go to state 39
    conditional_expression  go to state 40
    expr1                   go to state 41
    expression_or_list      go to state 42
    expr2                   go to state 43
    left_compare            go to state 44
    expr3                   go to state 45
    simple_stmt             go to state 46
    expression_stmt         go to state 47
    assignment_stmt         go to state 48
    target_list             go to state 49
    target_list1            go to state 50
    target                  go to state 51
    pass_stmt               go to state 52
    print_stmt              go to state 53
    return_stmt             go to state 54
    break_stmt              go to state 55
    continue_stmt           go to state 56
    compound_stmt           go to state 57
    statement               go to state 58
    stmt_list               go to state 59
    if_stmt                 go to state 60
    while_stmt              go to state 61
    for_stmt                go to state 62
    funcdef                 go to state 63
    classdef                go to state 64
    parameterized_type      go to state 65
    __1                     go to state 66
    __7                     go to state 67


state 3

    0 $accept: program $end .

    $default  accept


state 4

   11 string_piece: STRING .

    $default  reduce using rule 11 (string_piece)


state 5

    2 identifier: ID .

    $default  reduce using rule 2 (identifier)


state 6

   96 break_stmt: "break" .

    $default  reduce using rule 96 (break_stmt)


state 7

   97 continue_stmt: "continue" .

    $default  reduce using rule 97 (continue_stmt)


state 8

  124 funcdef: "def" . funcname "(" parameter_list ")" opt_type_annotation ":" @6 funcbody

    ID  shift, and go to state 5

    identifier  go to state 68
    funcname    go to state 69


state 9

  122 for_stmt: "for" . target_list "in" expression_or_list ":" @4 suite @5 else_clause

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "("             shift, and go to state 14
    "["             shift, and go to state 17
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    $default  reduce using rule 81 (target_list1)

    identifier          go to state 25
    atom                go to state 26
    enclosure           go to state 27
    literal             go to state 28
    string_piece        go to state 29
    stringliteral       go to state 30
    parenth_form        go to state 31
    list_display        go to state 32
    dict_display        go to state 33
    primary             go to state 70
    attributeref        go to state 35
    subscription        go to state 36
    slicing             go to state 37
    call                go to state 38
    target_list         go to state 71
    target_list1        go to state 50
    target              go to state 51
    parameterized_type  go to state 65


state 10

  112 if_stmt: "if" . expression ":" @1 suite elifs

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    identifier              go to state 74
    atom                    go to state 26
    enclosure               go to state 27
    literal                 go to state 28
    string_piece            go to state 29
    stringliteral           go to state 30
    parenth_form            go to state 31
    list_display            go to state 32
    dict_display            go to state 33
    primary                 go to state 34
    attributeref            go to state 75
    subscription            go to state 76
    slicing                 go to state 77
    call                    go to state 38
    expression              go to state 78
    conditional_expression  go to state 40
    expr1                   go to state 41
    expr2                   go to state 43
    left_compare            go to state 44
    expr3                   go to state 45
    parameterized_type      go to state 65


state 11

   10 literal: "@int_literal" .

    $default  reduce using rule 10 (literal)


state 12

   40 expr1: "not" . expr1

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    identifier          go to state 74
    atom                go to state 26
    enclosure           go to state 27
    literal             go to state 28
    string_piece        go to state 29
    stringliteral       go to state 30
    parenth_form        go to state 31
    list_display        go to state 32
    dict_display        go to state 33
    primary             go to state 34
    attributeref        go to state 75
    subscription        go to state 76
    slicing             go to state 77
    call                go to state 38
    expr1               go to state 79
    expr2               go to state 43
    left_compare        go to state 44
    expr3               go to state 45
    parameterized_type  go to state 65


state 13

  119 while_stmt: "while" . expression ":" @2 suite @3 else_clause

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    identifier              go to state 74
    atom                    go to state 26
    enclosure               go to state 27
    literal                 go to state 28
    string_piece            go to state 29
    stringliteral           go to state 30
    parenth_form            go to state 31
    list_display            go to state 32
    dict_display            go to state 33
    primary                 go to state 34
    attributeref            go to state 75
    subscription            go to state 76
    slicing                 go to state 77
    call                    go to state 38
    expression              go to state 80
    conditional_expression  go to state 40
    expr1                   go to state 41
    expr2                   go to state 43
    left_compare            go to state 44
    expr3                   go to state 45
    parameterized_type      go to state 65


state 14

   15 parenth_form: "(" . expression ")"
   16             | "(" . __19 ")"
   76 target_list: "(" . target ")"
   78            | "(" . target_list1 ")"

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    ")"       reduce using rule 81 (target_list1)
    ")"       [reduce using rule 196 (__19)]
    $default  reduce using rule 81 (target_list1)

    identifier              go to state 25
    atom                    go to state 26
    enclosure               go to state 27
    literal                 go to state 28
    string_piece            go to state 29
    stringliteral           go to state 30
    parenth_form            go to state 31
    list_display            go to state 32
    dict_display            go to state 33
    primary                 go to state 34
    attributeref            go to state 35
    subscription            go to state 36
    slicing                 go to state 37
    call                    go to state 38
    expression              go to state 81
    conditional_expression  go to state 40
    expr1                   go to state 41
    expr2                   go to state 43
    left_compare            go to state 44
    expr3                   go to state 45
    target_list1            go to state 82
    target                  go to state 83
    parameterized_type      go to state 65
    __19                    go to state 84


state 15

   57 expr3: "+" . expr3

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    identifier          go to state 74
    atom                go to state 26
    enclosure           go to state 27
    literal             go to state 28
    string_piece        go to state 29
    stringliteral       go to state 30
    parenth_form        go to state 31
    list_display        go to state 32
    dict_display        go to state 33
    primary             go to state 34
    attributeref        go to state 75
    subscription        go to state 76
    slicing             go to state 77
    call                go to state 38
    expr3               go to state 85
    parameterized_type  go to state 65


state 16

   56 expr3: "-" . expr3

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    identifier          go to state 74
    atom                go to state 26
    enclosure           go to state 27
    literal             go to state 28
    string_piece        go to state 29
    stringliteral       go to state 30
    parenth_form        go to state 31
    list_display        go to state 32
    dict_display        go to state 33
    primary             go to state 34
    attributeref        go to state 75
    subscription        go to state 76
    slicing             go to state 77
    call                go to state 38
    expr3               go to state 86
    parameterized_type  go to state 65


state 17

   17 list_display: "[" . __20 "]"
   79 target_list: "[" . target_list1 "]"
   80            | "[" . target "]"

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    "]"       reduce using rule 81 (target_list1)
    "]"       [reduce using rule 198 (__20)]
    $default  reduce using rule 81 (target_list1)

    identifier              go to state 25
    atom                    go to state 26
    enclosure               go to state 27
    literal                 go to state 28
    string_piece            go to state 29
    stringliteral           go to state 30
    parenth_form            go to state 31
    list_display            go to state 32
    dict_display            go to state 33
    primary                 go to state 34
    attributeref            go to state 35
    subscription            go to state 36
    slicing                 go to state 37
    call                    go to state 38
    expression              go to state 87
    conditional_expression  go to state 40
    expr1                   go to state 41
    expr2                   go to state 43
    left_compare            go to state 44
    expr3                   go to state 45
    target_list1            go to state 88
    target                  go to state 89
    parameterized_type      go to state 65
    __20                    go to state 90


state 18

  135 classdef: "class" . identifier type_formals ":" @7 classbody

    ID  shift, and go to state 5

    identifier  go to state 91


state 19

   89 pass_stmt: "pass" .

    $default  reduce using rule 89 (pass_stmt)


state 20

   90 print_stmt: "print" . empty expression_list0_no_comma
   91           | "print" . ">>" expression
   92           | "print" . ">>" expression "," expression_list_no_comma
   93           | "print" . empty expression_list_no_comma ","
   94           | "print" . ">>" expression "," expression_list_no_comma ","

    ">>"  shift, and go to state 92

    $default  reduce using rule 151 (empty)

    empty  go to state 93


state 21

   95 return_stmt: "return" . expression_or_list0

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    $default  reduce using rule 151 (empty)

    identifier              go to state 74
    atom                    go to state 26
    enclosure               go to state 27
    literal                 go to state 28
    string_piece            go to state 29
    stringliteral           go to state 30
    parenth_form            go to state 31
    list_display            go to state 32
    dict_display            go to state 33
    primary                 go to state 34
    attributeref            go to state 75
    subscription            go to state 76
    slicing                 go to state 77
    call                    go to state 38
    expression              go to state 39
    conditional_expression  go to state 40
    expr1                   go to state 41
    expression_or_list      go to state 94
    expression_or_list0     go to state 95
    expr2                   go to state 43
    left_compare            go to state 44
    expr3                   go to state 45
    parameterized_type      go to state 65
    empty                   go to state 96
    __1                     go to state 66


state 22

   18 dict_display: "{" . __21 "}"

    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    "@int_literal"  shift, and go to state 11
    "not"           shift, and go to state 12
    "("             shift, and go to state 72
    "+"             shift, and go to state 15
    "-"             shift, and go to state 16
    "["             shift, and go to state 73
    "{"             shift, and go to state 22
    RAWSTRING       shift, and go to state 24

    $default  reduce using rule 200 (__21)

    identifier              go to state 74
    atom                    go to state 26
    enclosure               go to state 27
    literal                 go to state 28
    string_piece            go to state 29
    stringliteral           go to state 30
    parenth_form            go to state 31
    list_display            go to state 32
    dict_display            go to state 33
    key_datum_list          go to state 97
    key_datum               go to state 98
    primary                 go to state 34
    attributeref            go to state 75
    subscription            go to state 76
    slicing                 go to state 77
    call                    go to state 38
    expression              go to state 99
    conditional_expression  go to state 40
    expr1                   go to state 41
    expr2                   go to state 43
    left_compare            go to state 44
    expr3                   go to state 45
    parameterized_type      go to state 65
    __21                    go to state 100


state 23

  172 __7: NEWLINE .

    $default  reduce using rule 172 (__7)


state 24

   12 string_piece: RAWSTRING .

    $default  reduce using rule 12 (string_piece)


state 25

    3 atom: identifier .
   84 target: identifier .
   85       | identifier . type_annotation
  146 parameterized_type: identifier . type_params

    "::"  shift, and go to state 101
    "of"  shift, and go to state 102

    ")"       reduce using rule 3 (atom)
    ")"       [reduce using rule 84 (target)]
    ","       reduce using rule 3 (atom)
    ","       [reduce using rule 84 (target)]
    "="       reduce using rule 84 (target)
    "]"       reduce using rule 3 (atom)
    "]"       [reduce using rule 84 (target)]
    "in"      reduce using rule 3 (atom)
    "in"      [reduce using rule 84 (target)]
    $default  reduce using rule 3 (atom)

    type_annotation  go to state 103
    type_params      go to state 104
    __6              go to state 105


state 26

   21 primary: atom .

    $default  reduce using rule 21 (primary)


state 27

    5 atom: enclosure .

    $default  reduce using rule 5 (atom)


state 28

    4 atom: literal .

    $default  reduce using rule 4 (atom)


state 29

   13 stringliteral: string_piece .

    $default  reduce using rule 13 (stringliteral)


state 30

    9 literal: stringliteral .
   14 stringliteral: stringliteral . string_piece

    STRING     shift, and go to state 4
    RAWSTRING  shift, and go to state 24

    $default  reduce using rule 9 (literal)

    string_piece  go to state 106


state 31

    6 enclosure: parenth_form .

    $default  reduce using rule 6 (enclosure)


state 32

    7 enclosure: list_display .

    $default  reduce using rule 7 (enclosure)


state 33

    8 enclosure: dict_display .

    $default  reduce using rule 8 (enclosure)


state 34

   26 attributeref: primary . "." identifier
   27 subscription: primary . "[" expression_or_list "]"
   28 slicing: primary . "[" bound ":" bound "]"
   31 call: primary . "(" argument_list ")"
   55 expr3: primary .

    "("  shift, and go to state 107
    "."  shift, and go to state 108
    "["  shift, and go to state 109

    $default  reduce using rule 55 (expr3)


state 35

   22 primary: attributeref .
   86 target: attributeref .

    ")"       reduce using rule 22 (primary)
    ")"       [reduce using rule 86 (target)]
    ","       reduce using rule 22 (primary)
    ","       [reduce using rule 86 (target)]
    "="       reduce using rule 86 (target)
    "]"       reduce using rule 22 (primary)
    "]"       [reduce using rule 86 (target)]
    "in"      reduce using rule 22 (primary)
    "in"      [reduce using rule 86 (target)]
    $default  reduce using rule 22 (primary)


state 36

   23 primary: subscription .
   87 target: subscription .

    ")"       reduce using rule 23 (primary)
    ")"       [reduce using rule 87 (target)]
    ","       reduce using rule 23 (primary)
    ","       [reduce using rule 87 (target)]
    "="       reduce using rule 87 (target)
    "]"       reduce using rule 23 (primary)
    "]"       [reduce using rule 87 (target)]
    "in"      reduce using rule 23 (primary)
    "in"      [reduce using rule 87 (target)]
    $default  reduce using rule 23 (primary)


state 37

   24 primary: slicing .
   88 target: slicing .

    ")"       reduce using rule 24 (primary)
    ")"       [reduce using rule 88 (target)]
    ","       reduce using rule 24 (primary)
    ","       [reduce using rule 88 (target)]
    "="       reduce using rule 88 (target)
    "]"       reduce using rule 24 (primary)
    "]"       [reduce using rule 88 (target)]
    "in"      reduce using rule 24 (primary)
    "in"      [reduce using rule 88 (target)]
    $default  reduce using rule 24 (primary)


state 38

   25 primary: call .

    $default  reduce using rule 25 (primary)


state 39

   43 expression_or_list: expression .
  160 __1: expression . ","

    ","  shift, and go to state 110

    $default  reduce using rule 43 (expression_or_list)


state 40

   34 expression: conditional_expression .

    $default  reduce using rule 34 (expression)


state 41

   35 conditional_expression: expr1 . "if" expr1 "else" expression
   36                       | expr1 .
   38 expr1: expr1 . "or" expr1
   39      | expr1 . "and" expr1

    "and"  shift, and go to state 111
    "if"   shift, and go to state 112
    "or"   shift, and go to state 113

    $default  reduce using rule 36 (conditional_expression)


state 42

   72 expression_stmt: expression_or_list .

    $default  reduce using rule 72 (expression_stmt)


state 43

   37 expr1: expr2 .

    $default  reduce using rule 37 (expr1)


state 44
